#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-backend-rocksdb"
version = "1.0.0-dev"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-rocksdb"
homepage = "http://zenoh.io"
authors = [
  "kydos <angelo@icorsaro.net>",
  "Julien Enoch <julien@enoch.fr>",
  "Olivier Hécart <olivier.hecart@zettascale.tech>",
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Sreeja Nair <sreeja.nair@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming", "database"]
description = "Backend for Zenoh using RocksDB"

[lib]
name = "zenoh_backend_rocksdb"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]
dynamic_plugin = []
default = ["dynamic_plugin"]

[dependencies]
async-trait = "0.1.66"
git-version = "0.3.5"
lazy_static = "1.4.0"
rocksdb = "0.22.0"
serde_json = "1.0.114"
tokio = { version = "1.35.1", default-features = false } # Default features are disabled due to some crates' requirements
tracing = "0.1"
uhlc = "0.7.0"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
  "unstable",
  "internal",
  "plugins",
] , version = "1.0.0-dev" }
zenoh_backend_traits = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" , version = "1.0.0-dev" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" , version = "1.0.0-dev" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-rocksdb"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=1.0.0~dev-1)"
